--- a/CIT-APP/app/src/main/res/layout/activity_profile_main.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_profile_main.xml
@@ -310,6 +310,13 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="@string/hearingAid" />
+
+                        <RadioButton
+                            android:id="@+id/rbBothCI"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:text="@string/both" />
                     </RadioGroup>
                 </LinearLayout>
             </TableRow>
@@ -386,7 +393,7 @@
                     android:background="#FFFF8C00"
                     android:layout_weight="0.5"
                     android:layout_marginLeft="20dp"
-                    android:text="@string/ready"
+                    android:text="@string/save"
                     android:textSize="20sp" />
             </TableRow>
         </TableLayout>
