--- a/CIT-APP/app/src/main/res/layout/activity_instruction.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_instruction.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:context=".other_activities.Instruction">
 
     <FrameLayout
@@ -26,6 +25,7 @@
         android:layout_height="52dp"
         android:text="TITLE"
         android:textSize="40sp"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +37,7 @@
         android:layout_height="54dp"
         android:text="Description"
         android:textSize="20sp"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exerciseTitle" />
@@ -47,6 +48,7 @@
         android:layout_height="wrap_content"
         android:text="Instruction"
         android:textSize="30sp"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exerciseDescription" />
