--- a/CIT-APP/app/src/main/res/layout/activity_minimal_pairs.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_minimal_pairs.xml
@@ -4,42 +4,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:context=".exercises.MinimalPairs">
 
-    <Button
+    <androidx.cardview.widget.CardView
         android:id="@+id/listen"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/button_border"
-        android:text="@string/Listen"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/record"
+        android:layout_marginTop="100dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wordNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/wordNumber">
 
-    <Button
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/yellow_background"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/listenImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.9"
+                android:paddingLeft="20dp"
+                app:srcCompat="@drawable/hearing" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:text="@string/Listen"
+                android:layout_weight="0.3"
+                android:background="@android:color/transparent"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="#000000"
+                app:layout_constraintBottom_toTopOf="@+id/record"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/wordNumber" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/record"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="90dp"
-        android:background="@drawable/button_border"
-        android:text="@string/record"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="50dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listen">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/yellow_background"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/recordImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.7"
+                android:background="@android:color/transparent"
+                android:paddingLeft="20dp"
+                app:srcCompat="@drawable/play" />
+
+            <TextView
+                android:id="@+id/recordText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:text="@string/record"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:layout_weight="0.3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/wordNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="50sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="@string/MinimalPairs"
+        android:textSize="40sp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
