--- a/CIT-APP/app/src/main/res/layout/activity_minimal_pairs_exercise_finished.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_minimal_pairs_exercise_finished.xml
@@ -4,68 +4,115 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:context=".other_activities.MinimalPairsExerciseFinished">
 
-    <Button
-        android:id="@+id/againButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/button_border"
-        android:text="@string/Again"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView4"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        app:cardCornerRadius="50dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/minPairs2Layout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/yellow_background"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/doneButton"
+                android:layout_width="190dp"
+                android:layout_height="111dp"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:text="@string/Done"
+                android:textSize="40sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/doneButton" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView4">
 
-    <Button
-        android:id="@+id/doneButton"
-        android:layout_width="190dp"
-        android:layout_height="118dp"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/button_border"
-        android:text="@string/Done"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/positiveMessage" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/yellow_background"
+            android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/minimalPairsPercentage"
-        style="@style/Widget.AppCompat.RatingBar"
-        android:layout_width="240dp"
-        android:layout_height="51dp"
-        android:background="@drawable/rating_bar_border"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/againButton"
+                android:layout_width="190dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:text="@string/Again"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/done" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/score"
-        android:layout_width="140dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="80dp"
-        android:gravity="center"
-        android:text="10 / 10 \n "
-        android:textColor="#330000"
-        android:textSize="40sp"
+    <LinearLayout
+        android:id="@+id/minPairs2Layout"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/background"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/minimalPairsPercentage" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/positiveMessage"
-        android:layout_width="190dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="80dp"
-        android:gravity="center"
-        android:text="@string/Motivation"
-        android:textColor="#330000"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/score" />
+        <ProgressBar
+            android:id="@+id/minimalPairsPercentage"
+            style="@style/Widget.AppCompat.RatingBar"
+            android:layout_width="240dp"
+            android:layout_height="51dp"
+            android:layout_gravity="center"
+            android:background="@drawable/rating_bar_border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="140dp"
+            android:layout_height="53dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="10 / 10 \n "
+            android:textColor="#330000"
+            android:textSize="40sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/minimalPairsPercentage" />
+
+        <TextView
+            android:id="@+id/positiveMessage"
+            android:layout_width="190dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="@string/Motivation"
+            android:textColor="#330000"
+            android:textSize="40sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/score" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
