--- a/CIT-APP/app/src/main/res/layout/activity_profile.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_profile.xml
@@ -312,6 +312,13 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
                             android:text="@string/hearingAid" />
+
+                        <RadioButton
+                            android:id="@+id/rbBothCI"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:text="@string/both" />
                     </RadioGroup>
                 </LinearLayout>
             </TableRow>
