--- a/CIT-APP/app/src/main/res/layout/activity_settings.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_settings.xml
@@ -10,87 +10,58 @@
 
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Einstellungen"
-        android:background="#FFFF8C00"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="#000000"
-        android:lines="1"
-        android:textSize="36sp"
-        android:gravity="center"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-
-
-
-    <TextView
         android:id="@+id/textViewNotifications"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Zeit für Benachrichtigungen"
-        android:layout_marginTop="100sp"
         android:layout_marginStart="8sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
         android:lines="1"
+        android:text="@string/timefornotifications"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginBottom="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/SpinnerNotifications"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="103sp"
         android:hint="9:00"
+        android:layout_marginBottom="200dp"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewNotifications"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.55" />
 
-
-
-    <Button
-        android:id="@+id/button_update_profile"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="4"
-        app:layout_constraintWidth_percent="0.7"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="80sp"
-        android:layout_marginBottom="8dp"
-        android:textColor="#000000"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView4"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        app:cardCornerRadius="50dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="#FFFF8C00"
-        android:text="Profil Aktualisieren"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNotifications" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewNotifications">
 
-    <Button
-        android:id="@+id/button_restart_session"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="4"
-        app:layout_constraintWidth_percent="0.7"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="8dp"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="#FFFF8C00"
-        android:text="Übungseinheit Zurücksetzen"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/button_update_profile" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/yellow_background"
+            android:orientation="vertical">
 
-
+            <Button
+                android:id="@+id/button_restart_session"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:text="@string/restartSession"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
