--- a/CIT-APP/app/src/main/res/layout/activity_syllable_repetition.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_syllable_repetition.xml
@@ -6,14 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".exercises.SyllableRepetition">
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="@string/SyllableRepetition"
+        android:textSize="40sp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/startTimer"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:background="#FFFF8C00"
-        android:text="Start"
-        android:textSize="30sp"
-        android:textColor="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:text="@string/Listen"
+        android:textSize="20dp"
+        android:background="@drawable/yellow_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -30,7 +42,7 @@
         app:layout_constraintBottom_toTopOf="@+id/startTimer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/timer"
@@ -51,12 +63,12 @@
         android:id="@+id/textView2"
         android:layout_width="266dp"
         android:layout_height="57dp"
-        android:textColor="#000000"
-        android:textSize="40dp"
         android:gravity="center"
         android:text="PATAKA"
+        android:textColor="#000000"
+        android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="45dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
