--- a/CIT-APP/app/src/main/res/layout/activity_word__list.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_word__list.xml
@@ -7,29 +7,70 @@
     tools:context=".exercises.Word_List">
 
     <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="@string/WordList"
+        android:textSize="40sp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/wordNumber3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:text="TextView"
         android:textColor="#330000"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-    <Button
-        android:id="@+id/recordButtonWordList"
-        android:layout_width="206dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="100dp"
-        android:text="@string/record"
-        android:background="#FFFF8C00"
-        android:textColor="#000000"
-        android:textSize="20sp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/recordWordList"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/word">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/yellow_background"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/recordWordListImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.7"
+                android:background="@android:color/transparent"
+                android:paddingLeft="20dp"
+                app:srcCompat="@drawable/play" />
+
+            <TextView
+                android:id="@+id/recordWordListText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.3"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="@string/record"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/word"
@@ -41,7 +82,7 @@
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/recordButtonWordList"
+        app:layout_constraintBottom_toTopOf="@+id/recordWordList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
