--- a/CIT-APP/app/src/main/res/layout/exercise_element.xml
+++ b/CIT-APP/app/src/main/res/layout/exercise_element.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -18,7 +19,7 @@
 
     <TextView
         android:id="@+id/exerciseName"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
