--- a/CIT-APP/app/src/main/res/layout/activity_login.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFFF8C00"
         android:hint="Name"
+        android:autoSizeTextType="uniform"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:textSize="30sp"
@@ -65,6 +66,7 @@
         android:imeOptions="actionDone"
         android:inputType="text|phone"
         android:textSize="30sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_ID" />
 
