--- a/CIT-APP/app/src/main/res/layout/activity_login_info_screen.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_login_info_screen.xml
@@ -37,6 +37,7 @@
                 android:id="@+id/title_login_screen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autoSizeTextType="uniform"
                 android:textSize="40sp"
                 android:gravity="center"
                 android:text="Information" />
@@ -46,6 +47,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:layout_width="match_parent"
+                android:autoSizeTextType="uniform"
                 android:layout_height="match_parent"
                 android:text="@string/LoginScreenInformation"
                 android:textSize="20sp" />
