--- a/CIT-APP/app/src/main/res/layout/activity_main.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CITA"
+        android:autoSizeTextType="uniform"
         android:textStyle="bold"
         android:textSize="40sp"
         android:textColor="#000000"
@@ -66,6 +67,7 @@
         android:layout_height="wrap_content"
         android:text="@string/mainTitle"
         android:textColor="#000000"
+        android:autoSizeTextType="uniform"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
