--- a/CIT-APP/app/src/main/res/layout/activity_results_per_day.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_results_per_day.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DailyEvaluation">
+    tools:context=".other_activities.ResultsPerDay">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/dailyEvaluationBarChart"
