--- a/CIT-APP/app/src/main/res/layout/activity_trainingset_finished.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_trainingset_finished.xml
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:autoSizeTextType="uniform"
             android:text="@string/trainingsetFinishedSaying"
             android:textSize="30sp" />
     </LinearLayout>
