--- a/CIT-APP/app/src/main/res/layout/exercise_element.xml
+++ b/CIT-APP/app/src/main/res/layout/exercise_element.xml
@@ -24,6 +24,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
+        android:autoSizeTextType="uniform"
         android:background="@drawable/button_border"
         android:text="TextView"
         android:textColor="#000000"
