--- a/CIT-APP/app/src/main/res/layout/activity_results_per_day.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_results_per_day.xml
@@ -11,9 +11,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/home_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
     </com.github.mikephil.charting.charts.BarChart>
 
+    <Button
+        android:id="@+id/home_button"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="@string/home"
+        android:autoSizeTextType="uniform"
+        android:background="@drawable/yellow_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
