--- a/CIT-APP/app/src/main/res/layout/activity_results_per_day.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_results_per_day.xml
@@ -12,21 +12,36 @@
         android:layout_height="match_parent"
         android:background="@drawable/background"
         android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toTopOf="@+id/home_button"
+        app:layout_constraintBottom_toTopOf="@+id/linlayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
     </com.github.mikephil.charting.charts.BarChart>
 
-    <Button
-        android:id="@+id/home_button"
+    <LinearLayout
+        android:id="@+id/linlayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="@string/home"
-        android:autoSizeTextType="uniform"
-        android:background="@drawable/yellow_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/home_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:autoSizeTextType="uniform"
+            android:layout_weight="0.5"
+            android:background="@drawable/yellow_background"
+            android:text="@string/home" />
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:autoSizeTextType="uniform"
+            android:background="@drawable/yellow_background"
+            android:layout_weight="0.5"
+            android:text="@string/save" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
